<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="false"
    android:visibility="visible">


    <EditText
        android:id="@+id/SubtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:text="Subtotal:"
        app:layout_constraintBottom_toTopOf="@+id/TaxLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuantityLabel"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/ticketSubtotalTextView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="20dp"
        android:text="@string/_0_00"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/SubtotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/ticketQuantityTextView" />

    <TextView
        android:id="@+id/ticketTaxTextView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/TaxLabel"
        app:layout_constraintStart_toEndOf="@+id/TaxLabel"
        app:layout_constraintTop_toBottomOf="@+id/ticketSubtotalTextView" />

    <EditText
        android:id="@+id/TaxLabel"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/SubtotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/QuantityLabel" />

    <TextView
        android:id="@+id/ticketTotalTextView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ticketTaxTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TotalLabel"
        app:layout_constraintTop_toTopOf="@+id/TotalLabel" />

    <EditText
        android:id="@+id/PriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/ticket_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticketPriceTextView"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:text="@string/_0_00"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/PriceLabel"
        app:layout_constraintStart_toEndOf="@+id/PriceLabel"
        app:layout_constraintTop_toTopOf="@+id/PriceLabel" />

    <TextView
        android:id="@+id/ticketQuantityTextView"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SubtotalLabel"
        app:layout_constraintEnd_toEndOf="@+id/ticketPriceTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ticketPriceTextView"
        app:layout_constraintTop_toBottomOf="@+id/ticketPriceTextView"
        app:layout_constraintVertical_bias="0.315" />

    <EditText
        android:id="@+id/TotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/TaxLabel"
        app:layout_constraintTop_toBottomOf="@+id/TaxLabel" />

    <EditText
        android:id="@+id/QuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PriceLabel" />

    <EditText
        android:id="@+id/paymentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="360dp"
        android:layout_marginRight="360dp"
        android:layout_marginBottom="320dp"
        android:editable="false"
        android:ems="10"
        android:focusable="auto"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="40dp"
        android:text="Submit Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cardInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="1234"
        android:editable="true"
        android:ems="10"
        android:enabled="true"
        android:focusable="true"
        android:hint="16 digit card number"
        android:inputType="number"
        android:maxLength="16"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/expiryInput"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cardNumberLabel"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="12dp"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:text="Card Number:"
        app:layout_constraintBottom_toTopOf="@+id/expiryDateLabel"
        app:layout_constraintEnd_toStartOf="@+id/cardInput" />

    <EditText
        android:id="@+id/expiryDateLabel"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:layout_marginBottom="16dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:text="Expiry Date:"
        app:layout_constraintBottom_toTopOf="@+id/securityCodeLabel"
        app:layout_constraintEnd_toStartOf="@+id/expiryInput" />

    <View
        android:id="@+id/divider"
        android:layout_width="598dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/paymentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalLabel" />

    <EditText
        android:id="@+id/expiryInput"
        android:layout_width="96dp"
        android:layout_height="51dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="12dp"
        android:editable="true"
        android:ems="10"
        android:focusable="auto"
        android:hint="MMYY"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/codeInput"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/securityCodeLabel"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:layout_marginBottom="124dp"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:text="Security Code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/codeInput" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="124dp"
        android:clickable="true"
        android:editable="true"
        android:ems="10"
        android:focusable="auto"
        android:hint="123"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/movieTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:editable="false"
        android:inputType="none"
        android:text="Summary"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chosenSeatsPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="ChosenSeats"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/movieTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/movieTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

    <TextView
        android:id="@+id/chosenSeatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="list of seats"
        android:textSize="18sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/chosenSeatsPromptTextView"
        app:layout_constraintStart_toStartOf="@+id/chosenSeatsPromptTextView"
        app:layout_constraintTop_toBottomOf="@+id/chosenSeatsPromptTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>